--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
 }
 
-main {
+.wrapper {
   height: 100%;
 }
 
@@ -15,7 +15,7 @@ main {
   border-radius: 5px;
 }
 
-form {
+.form {
   background-color: rgb(245, 204, 150);
   border: 2px solid black;
   padding: 30px;
@@ -35,13 +35,14 @@ form {
   color: dimgray;
 }
 
-.list-cats {
+.nav {
   border: 2px solid black;
   flex-basis: 30%;
   flex-grow: 2;
   background-color: rgb(245, 225, 200);
 }
-.info-cats {
+
+.content {
   border: 2px solid black;
   flex-grow: 1;
   flex-basis: 45%;
@@ -49,7 +50,7 @@ form {
   flex-flow: column wrap;
 }
 
-.for-foto {
+.userpic {
   width: 150px;
   height: 150px;
   overflow: hidden;
@@ -57,20 +58,24 @@ form {
   background-image: url("https://99px.ru/sstorage/86/2016/02/mid_10613_4368.jpg");
   background-position: center center;
   background-size: 115%;
+  margin-left: auto;
+  margin-right: auto;
 }
-img {
+
+.userpic__image {
   width: 120%;
 }
 
-.text-content {
+.more {
   text-align: center;
 }
+
 .comments {
   height: 100%;
   width: 40%;
 }
 
-ul {
+.nav__list {
   list-style: none;
   margin: 0;
   text-decoration: none;
@@ -78,21 +83,25 @@ ul {
   width: 100%;
   padding: 0;
 }
-.view {
+
+.actual {
   background-color: burlywood;
 }
 
-.li-reference {
+.nav__link {
   text-decoration: none;
   color: dimgray;
   display: block;
   font-size: 24px;
   padding: 5px 0 5px 30px;
 }
-.li-reference:hover {
+
+.nav__link:hover {
   background-color: rgb(197, 208, 223);
 }
-input[type="text"] {
+
+.form__name-of-cat,
+.form__age-of-cat {
   font-size: 24px;
   margin-left: 20px;
   margin-bottom: 20px;
@@ -101,7 +110,7 @@ input[type="text"] {
   border: none;
 }
 
-#gender {
+.form__gender-of-cats {
   font-size: 24px;
   margin-left: 20px;
   width: 154px;
@@ -110,18 +119,20 @@ input[type="text"] {
   border: none;
 }
 
-.comment {
+.comment__item {
   margin-left: 15px;
   background-color: #f8f8f8;
 }
-.comment-autor {
+
+.comment__author {
   padding-top: 5px;
   padding-left: 5px;
   font-weight: bold;
   font-size: 16px;
   border-bottom: 2px solid #e5e6e6;
 }
-.comment-text {
+
+.comment__text {
   padding-left: 15px;
   font-size: 14px;
   padding-bottom: 10px;
